# iot-os-esp32

./: CMakeLists.txt  README.md
components/common/: c_common.c  c_common.h
components/crypto/: luat_crc.c
components/ethernet/common/: dhcp_client.c  dns_client.c  platform_def.h
components/io_queue/: luat_lib_io_queue.c
components/lcd/: luat_lcd_sh8601z.c  luat_lib_lcd.c
components/little_flash/: luat_lib_little_flash.c  luat_little_flash_lfs2.c
components/little_flash/inc/: little_flash.h  little_flash_define.h  little_flash_table.h
components/little_flash/src/: little_flash.c
components/lua/: CMakeLists.txt  README.md
components/luat/: CMakeLists.txt
components/luat/freertos/: luat_task_freertos.c
components/luat/include/: luat_audio.h  luat_can.h  luat_crypto.h  luat_gpio.h  luat_i2c.h  luat_libs.h  luat_onewire.h  luat_rtos.h  luat_spi.h
components/luat/modules/: luat_lib_can.c  luat_lib_rtos.c  luat_lib_uart.c
components/luat/vfs/: luat_inline_libs.c
components/network/adapter/: luat_lib_socket.c  luat_network_adapter.h
components/network/libhttp/: luat_http.h
